import("//build/toolchain/wasm.gni")

wasm_lib("skwasm") {
  sources = [
    "canvas.cpp",
    "export.h",
    "helpers.h",
    "paint.cpp",
    "path.cpp",
    "surface.cpp",
    "wrappers.h",
  ]

  ldflags = [
    "-std=c++20",
    "-lGL",
    "-sUSE_WEBGL2=1",
    "-sMAX_WEBGL_VERSION=2",
    "-sALLOW_MEMORY_GROWTH",
  ]

  cflags = []

  if (is_debug) {
    ldflags += [
      "-O0",
      "-sDEMANGLE_SUPPORT=1",
      "-sASSERTIONS=1",
      "-sGL_ASSERTIONS=1",
      "-g3",
    ]
  } else {
    ldflags += [
      "-Oz",
      "--closure=1",
      "-flto",
      "-sSTANDALONE_WASM",
      "-sEXPORTED_FUNCTIONS=[stackAlloc]",
    ]

    cflags += [
      "-flto",
      "-fvisibility=hidden",
    ]
  }

  deps = [ "//third_party/skia" ]
}
