import("//third_party/dart/build/dart/dart_action.gni")

template("_dart2wasm") {
  prebuilt_dart_action(target_name) {
    forward_variables_from(invoker, "*")

    script = "//third_party/dart/pkg/dart2wasm/bin/dart2wasm.dart"

    args = []

    pool = "//flutter/build/dart:dart_pool"
  }
}

_dart2wasm("skwasm_dart_test") {
  inputs = [ "skwasm_dart_test.dart" ]
  outputs = [ "$root_out_dir/skasm_dart_test.wasm" ]
}
