import("//flutter/skwasm/samples/dart/dart_wasm.gni")

dart2wasm("_skwasm_dart_test_wasm") {
  main_dart_source = "lib/skwasm_dart_test.dart"
  dart_dependency_folders = [
    "lib",
    "//flutter/skwasm/pkg/skwasm/lib",
  ]
  wasm_out = "$root_out_dir/skwasm_dart_test.wasm"
}

copy("_skwasm_dart_test_server") {
  sources = [
    "$root_out_dir/skwasm/skwasm.js",
    "$root_out_dir/skwasm/skwasm.wasm",
    "$root_out_dir/skwasm/skwasm.worker.js",
    "$root_out_dir/skwasm_dart_test.wasm",
    "dart_imports.js",
    "index.html",
  ]
  outputs = [ "$target_out_dir/{{source_file_part}}" ]
  public_deps = [
    ":_skwasm_dart_test_wasm",
    "//flutter/skwasm:skwasm",
  ]
}

group("skwasm_dart_test") {
  public_deps = [ ":_skwasm_dart_test_server" ]
}
